@@ -29,7 +29,6 @@ tests_require = [
     "pytest-asyncio",
     "pytest-localserver",
     "flake8",
-    "types-mock",
     "types-requests",
     "mypy",
 ]
