@@ -1,6 +1,7 @@
 0.22.0
 ------
 
+* Fix type for the `mock`'s patcher object. See #556
 * Add `passthrough` argument to `BaseResponse` object. See #557
 * Fix `registries` leak. See #563
 
